--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "apollo-server-express": "^3.13.0",
     "mongoose": "^8.2.0",
     "dotenv": "^16.4.5",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "react-router-dom": "^6.22.2",
+    "lodash": "^4.17.21",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -33,9 +38,11 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "@tailwindcss/typography": "^0.5.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "@types/lodash": "^4.14.202"
   }
 }
